# resume-as-code

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  LICENSE  Makefile  README.md  cv_en.json  cv_fr.json  cv_it.json  index.html  pyproject.toml  pytest.ini  renovate.json
.github/workflows/: ci.yml  deploy.yml
assets/: index-4zs80Rr8.js  index-BZ2lRnpa.js  index-BlGG6stl.css  index-C7DFSmH8.css  index-CBzeulY4.js  index-CQniETBx.js  index-CQuJA9Ks.js  index-CeIRiEK9.js  index-Cv7F5kRg.js  index-DXcIc09B.js  index-DeFMfwLA.css  index-TPtPKUQP.js  index-YpTjhkp3.js
backend/: generate.py  requirements.txt
backend/generators/: html_generator.py  json_generator.py  pdf_generator.py
backend/parsers/: schema.py  yaml_parser.py
backend/templates/: cv.html
cv-data/: cv_en.yml  cv_fr.yml  cv_it.yml  ui_translations.yml
docs/: CV_SCHEMA.md  FAQ.md  GETTING_STARTED.md  ROADMAP.md
hooks/: validate_cv.py
tests/: conftest.py  test_pdf_generation.py
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
web/public/: cv_en.json  cv_fr.json  cv_it.json
web/src/: App.jsx
web/src/styles/: App.css
