[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-as-code"
version = "0.1.0"
description = "Generate HTML, JSON, and PDF CVs from YAML"
requires-python = ">=3.12"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.pylance]
pythonPlatform = "Linux"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
